starting on eyes area + added 6th pink

--- a/styles/_unikitty.scss
+++ b/styles/_unikitty.scss
@@ -2,11 +2,13 @@ $blue1: #76b4db;
 $blue2: #2e9fda;
 $blue3: #488db5;
 $pink1: #efa8ca;
-$pink1: #d999b6;
-$pink1: #e05da2;
-$pink1: #b45383;
+$pink2: #d999b6;
+$pink3: #e05da2;
+$pink4: #b45383;
+$pink5: #695963;
+$pink6: #695963;
 $grey1: #d5dde0;
-$grey1: #bac2c9;
+$grey2: #bac2c9;
 $green1: #c9d79a;
 $green2: #b2bb7e;
 $moss: #c1e1dc;
@@ -38,6 +40,331 @@ body {
     width: 1vmin;
     height: 1vmin;
     box-shadow:
-      32vmin 0vmin $blue1;
+      32vmin 0vmin $blue1,
+      32vmin 1vmin $blue1,
+      32vmin 2vmin $blue1,
+      33vmin 2vmin $blue1,
+      32vmin 3vmin $blue1,
+      33vmin 3vmin $blue1,
+      32vmin 3vmin $blue1,
+      31vmin 4vmin $blue1,
+      32vmin 4vmin $blue1,
+      33vmin 4vmin $blue2,
+      31vmin 5vmin $blue1,
+      32vmin 5vmin $blue1,
+      33vmin 5vmin $blue2,
+      31vmin 6vmin $blue2,
+      32vmin 6vmin $blue1,
+      33vmin 6vmin $blue2,
+      31vmin 7vmin $blue2,
+      32vmin 7vmin $blue1,
+      33vmin 7vmin $blue2,
+      30vmin 8vmin $blue1,
+      31vmin 8vmin $blue2,
+      32vmin 8vmin $blue1,
+      33vmin 8vmin $blue3,
+      33vmin 8vmin $blue3,
+      30vmin 9vmin $blue1,
+      31vmin 9vmin $blue3,
+      32vmin 9vmin $blue1,
+      33vmin 9vmin $blue3,
+      33vmin 9vmin $blue3,
+      34vmin 9vmin $blue3,
+      30vmin 10vmin $blue1,
+      31vmin 10vmin $blue3,
+      32vmin 10vmin $blue2,
+      33vmin 10vmin $blue3,
+      33vmin 10vmin $blue3,
+      34vmin 10vmin $blue3,
+      44vmin 10vmin $pink4,
+
+      18vmin 11vmin $pink4, /* both ears start */
+      19vmin 11vmin $pink4,
+      20vmin 11vmin $pink4,
+      30vmin 11vmin $blue2,
+      31vmin 11vmin $blue3,
+      32vmin 11vmin $blue2,
+      33vmin 11vmin $blue3,
+      33vmin 11vmin $blue3,
+      34vmin 11vmin $blue3,
+      43vmin 11vmin $pink4,
+      44vmin 11vmin $pink4,
+      18vmin 12vmin $pink4,
+      19vmin 12vmin $pink3,
+      20vmin 12vmin $pink3,
+      21vmin 12vmin $pink4,
+      22vmin 12vmin $pink4,
+      30vmin 12vmin $grey1,
+      31vmin 12vmin $grey1,
+      32vmin 12vmin $grey2,
+      33vmin 12vmin $grey2,
+      33vmin 12vmin $grey2,
+      34vmin 12vmin $grey2,
+      40vmin 12vmin $pink4,
+      41vmin 12vmin $pink4,
+      42vmin 12vmin $pink4,
+      43vmin 12vmin $pink3,
+      44vmin 12vmin $pink3,
+      18vmin 13vmin $pink4,
+      19vmin 13vmin $pink3,
+      20vmin 13vmin $pink3,
+      21vmin 13vmin $pink3,
+      22vmin 13vmin $pink3,
+      23vmin 13vmin $pink4,
+      24vmin 13vmin $pink4,
+      29vmin 13vmin $grey1,
+      30vmin 13vmin $grey1,
+      31vmin 13vmin $white,
+      32vmin 13vmin $white,
+      33vmin 13vmin $grey1,
+      34vmin 13vmin $grey1,
+      38vmin 13vmin $pink4,
+      39vmin 13vmin $pink4,
+      40vmin 13vmin $pink4,
+      41vmin 13vmin $pink3,
+      42vmin 13vmin $pink3,
+      43vmin 13vmin $pink3,
+      44vmin 13vmin $pink3,
+      18vmin 14vmin $pink4,
+      19vmin 14vmin $pink3,
+      20vmin 14vmin $pink3,
+      21vmin 14vmin $pink3,
+      22vmin 14vmin $pink3,
+      23vmin 14vmin $pink3,
+      24vmin 14vmin $pink3,
+      25vmin 14vmin $pink4,
+      26vmin 14vmin $pink4,
+      28vmin 14vmin $grey1,
+      29vmin 14vmin $grey1,
+      30vmin 14vmin $grey1,
+      31vmin 14vmin $grey1,
+      32vmin 14vmin $grey1,
+      33vmin 14vmin $grey1,
+      34vmin 14vmin $grey1,
+      35vmin 14vmin $grey1,
+      37vmin 14vmin $pink4,
+      38vmin 14vmin $pink4,
+      39vmin 14vmin $pink3,
+      40vmin 14vmin $pink3,
+      41vmin 14vmin $pink3,
+      42vmin 14vmin $pink3,
+      43vmin 14vmin $pink3,
+      44vmin 14vmin $pink3,
+      18vmin 15vmin $pink4,
+      19vmin 15vmin $pink3,
+      20vmin 15vmin $pink3,
+      21vmin 15vmin $pink3,
+      22vmin 15vmin $pink3,
+      23vmin 15vmin $pink3,
+      24vmin 15vmin $pink3,
+      25vmin 15vmin $pink3,
+      26vmin 15vmin $pink3,
+      27vmin 15vmin $pink4,
+      29vmin 15vmin $grey1,
+      30vmin 15vmin $grey1,
+      31vmin 15vmin $white,
+      32vmin 15vmin $white,
+      33vmin 15vmin $grey1,
+      34vmin 15vmin $grey1,
+      36vmin 15vmin $pink4,
+      37vmin 15vmin $pink3,
+      38vmin 15vmin $pink3,
+      39vmin 15vmin $pink3,
+      40vmin 15vmin $pink3,
+      41vmin 15vmin $pink3,
+      42vmin 15vmin $pink3,
+      43vmin 15vmin $pink3,
+      44vmin 15vmin $pink3,
+
+      18vmin 16vmin $pink4, /* 2nd last row of ears/horn start */
+      19vmin 16vmin $pink3,
+      20vmin 16vmin $pink3,
+      21vmin 16vmin $pink3,
+      22vmin 16vmin $pink3,
+      23vmin 16vmin $pink3,
+      24vmin 16vmin $pink3,
+      25vmin 16vmin $pink3,
+      26vmin 16vmin $pink3,
+      27vmin 16vmin $pink3,
+      29vmin 16vmin $grey1,
+      30vmin 16vmin $white,
+      31vmin 16vmin $white,
+      32vmin 16vmin $white,
+      33vmin 16vmin $grey1,
+      34vmin 16vmin $grey1,
+      36vmin 16vmin $pink3,
+      37vmin 16vmin $pink3,
+      38vmin 16vmin $pink3,
+      39vmin 16vmin $pink3,
+      40vmin 16vmin $pink3,
+      41vmin 16vmin $pink3,
+      42vmin 16vmin $pink3,
+      43vmin 16vmin $pink3,
+      44vmin 16vmin $pink3,
+      18vmin 17vmin $pink4,
+      19vmin 17vmin $pink4,
+      20vmin 17vmin $pink4,
+      21vmin 17vmin $pink4,
+      22vmin 17vmin $pink4,
+      23vmin 17vmin $pink4,
+      24vmin 17vmin $pink4,
+      25vmin 17vmin $pink4,
+      26vmin 17vmin $pink4,
+      27vmin 17vmin $pink4,
+      28vmin 17vmin $pink2,
+      29vmin 17vmin $grey1,
+      30vmin 17vmin $white,
+      31vmin 17vmin $white,
+      32vmin 17vmin $white,
+      33vmin 17vmin $grey1,
+      34vmin 17vmin $grey1,
+      35vmin 17vmin $pink2,
+      36vmin 17vmin $pink4,
+      37vmin 17vmin $pink4,
+      38vmin 17vmin $pink4,
+      39vmin 17vmin $pink4,
+      40vmin 17vmin $pink4,
+      41vmin 17vmin $pink4,
+      42vmin 17vmin $pink4,
+      43vmin 17vmin $pink4,
+      44vmin 17vmin $pink4,
+
+      18vmin 18vmin $pink2, /* start of head */
+      19vmin 18vmin $pink1,
+      20vmin 18vmin $pink1,
+      21vmin 18vmin $pink1,
+      22vmin 18vmin $pink1,
+      23vmin 18vmin $pink1,
+      24vmin 18vmin $pink1,
+      25vmin 18vmin $pink1,
+      26vmin 18vmin $pink1,
+      27vmin 18vmin $pink1,
+      28vmin 18vmin $pink1,
+      29vmin 18vmin $pink1,
+      30vmin 18vmin $pink1,
+      31vmin 18vmin $pink1,
+      32vmin 18vmin $pink1,
+      33vmin 18vmin $pink1,
+      34vmin 18vmin $pink1,
+      35vmin 18vmin $pink1,
+      36vmin 18vmin $pink1,
+      37vmin 18vmin $pink1,
+      38vmin 18vmin $pink1,
+      39vmin 18vmin $pink1,
+      40vmin 18vmin $pink1,
+      41vmin 18vmin $pink1,
+      42vmin 18vmin $pink1,
+      43vmin 18vmin $pink1,
+      44vmin 18vmin $pink1,
+      18vmin 19vmin $pink2,
+      19vmin 19vmin $pink1,
+      20vmin 19vmin $pink1,
+      21vmin 19vmin $pink1,
+      22vmin 19vmin $pink1,
+      23vmin 19vmin $pink1,
+      24vmin 19vmin $pink1,
+      25vmin 19vmin $pink1,
+      26vmin 19vmin $pink1,
+      27vmin 19vmin $pink1,
+      28vmin 19vmin $pink1,
+      29vmin 19vmin $pink1,
+      30vmin 19vmin $pink1,
+      31vmin 19vmin $pink1,
+      32vmin 19vmin $pink1,
+      33vmin 19vmin $pink1,
+      34vmin 19vmin $pink1,
+      35vmin 19vmin $pink1,
+      36vmin 19vmin $pink1,
+      37vmin 19vmin $pink1,
+      38vmin 19vmin $pink1,
+      39vmin 19vmin $pink1,
+      40vmin 19vmin $pink1,
+      41vmin 19vmin $pink1,
+      42vmin 19vmin $pink1,
+      43vmin 19vmin $pink1,
+      44vmin 19vmin $pink1,
+
+      18vmin 20vmin $pink2, /* start of eyes */
+      19vmin 20vmin $pink1,
+      20vmin 20vmin $pink1,
+      21vmin 20vmin $black,
+      22vmin 20vmin $pink1,
+      23vmin 20vmin $pink1,
+      24vmin 20vmin $pink1,
+      25vmin 20vmin $pink1,
+      26vmin 20vmin $pink1,
+      27vmin 20vmin $pink1,
+      28vmin 20vmin $pink1,
+      29vmin 20vmin $pink1,
+      30vmin 20vmin $pink1,
+      31vmin 20vmin $pink1,
+      32vmin 20vmin $pink1,
+      33vmin 20vmin $pink1,
+      34vmin 20vmin $pink1,
+      35vmin 20vmin $pink1,
+      36vmin 20vmin $pink1,
+      37vmin 20vmin $pink1,
+      38vmin 20vmin $pink1,
+      39vmin 20vmin $pink1,
+      40vmin 20vmin $pink1,
+      41vmin 20vmin $black,
+      42vmin 20vmin $pink1,
+      43vmin 20vmin $pink1,
+      44vmin 20vmin $pink1,
+      18vmin 21vmin $pink2,
+      19vmin 21vmin $pink1,
+      20vmin 21vmin $pink1,
+      21vmin 21vmin $pink2,
+      22vmin 21vmin $pink1,
+      23vmin 21vmin $pink1,
+      24vmin 21vmin $pink1,
+      25vmin 21vmin $pink1,
+      26vmin 21vmin $pink1,
+      27vmin 21vmin $pink1,
+      28vmin 21vmin $pink1,
+      29vmin 21vmin $pink1,
+      30vmin 21vmin $pink1,
+      31vmin 21vmin $pink1,
+      32vmin 21vmin $pink1,
+      33vmin 21vmin $pink1,
+      34vmin 21vmin $pink1,
+      35vmin 21vmin $pink1,
+      36vmin 21vmin $pink1,
+      37vmin 21vmin $pink1,
+      38vmin 21vmin $pink1,
+      39vmin 21vmin $pink1,
+      40vmin 21vmin $pink2,
+      41vmin 21vmin $pink1,
+      42vmin 21vmin $pink2,
+      43vmin 21vmin $pink1,
+      44vmin 21vmin $pink1,
+      18vmin 22vmin $pink2,
+      19vmin 22vmin $pink1,
+      20vmin 22vmin $pink2i,
+      21vmin 22vmin $pink2,
+      22vmin 22vmin $pink1,
+      23vmin 22vmin $pink1,
+      24vmin 22vmin $pink1,
+      25vmin 22vmin $pink1,
+      26vmin 22vmin $pink1,
+      27vmin 22vmin $pink1,
+      28vmin 22vmin $pink1,
+      29vmin 22vmin $pink1,
+      30vmin 22vmin $pink1,
+      31vmin 22vmin $pink1,
+      32vmin 22vmin $pink1,
+      33vmin 22vmin $pink1,
+      34vmin 22vmin $pink1,
+      35vmin 22vmin $pink1,
+      36vmin 22vmin $pink1,
+      37vmin 22vmin $pink1,
+      38vmin 22vmin $pink1,
+      39vmin 22vmin $pink1,
+      40vmin 22vmin $pink2,
+      41vmin 22vmin $pink1,
+      42vmin 22vmin $pink2,
+      43vmin 22vmin $pink1,
+      44vmin 22vmin $pink1,
+      ;
   }
 }
