--- a/styles/_unikitty.scss
+++ b/styles/_unikitty.scss
@@ -3,9 +3,9 @@ $blue2: #2e9fda;
 $blue3: #488db5;
 $pink1: #efa8ca;
 $pink2: #d999b6;
-$pink3: #e05da2;
-$pink4: #b45383;
-$pink5: #695963;
+$pink3: #b28498;
+$pink4: #e05da2;
+$pink5: #b45383;
 $pink6: #695963;
 $grey1: #d5dde0;
 $grey2: #bac2c9;
@@ -64,6 +64,7 @@ body {
       32vmin 8vmin $blue1,
       33vmin 8vmin $blue3,
       33vmin 8vmin $blue3,
+      34vmin 8vmin $blue3,
       30vmin 9vmin $blue1,
       31vmin 9vmin $blue3,
       32vmin 9vmin $blue1,
@@ -76,64 +77,65 @@ body {
       33vmin 10vmin $blue3,
       33vmin 10vmin $blue3,
       34vmin 10vmin $blue3,
-      44vmin 10vmin $pink4,
+      44vmin 10vmin $pink5,
 
-      18vmin 11vmin $pink4, /* both ears start */
-      19vmin 11vmin $pink4,
-      20vmin 11vmin $pink4,
+      18vmin 11vmin $pink5, /* both ears start */
+      19vmin 11vmin $pink5,
+      20vmin 11vmin $pink5,
       30vmin 11vmin $blue2,
       31vmin 11vmin $blue3,
       32vmin 11vmin $blue2,
       33vmin 11vmin $blue3,
       33vmin 11vmin $blue3,
       34vmin 11vmin $blue3,
-      43vmin 11vmin $pink4,
-      44vmin 11vmin $pink4,
-      18vmin 12vmin $pink4,
-      19vmin 12vmin $pink3,
-      20vmin 12vmin $pink3,
-      21vmin 12vmin $pink4,
-      22vmin 12vmin $pink4,
+      42vmin 11vmin $pink5,
+      43vmin 11vmin $pink5,
+      44vmin 11vmin $pink5,
+      18vmin 12vmin $pink5,
+      19vmin 12vmin $pink4,
+      20vmin 12vmin $pink4,
+      21vmin 12vmin $pink5,
+      22vmin 12vmin $pink5,
       30vmin 12vmin $grey1,
       31vmin 12vmin $grey1,
       32vmin 12vmin $grey2,
       33vmin 12vmin $grey2,
       33vmin 12vmin $grey2,
       34vmin 12vmin $grey2,
-      40vmin 12vmin $pink4,
-      41vmin 12vmin $pink4,
-      42vmin 12vmin $pink4,
-      43vmin 12vmin $pink3,
-      44vmin 12vmin $pink3,
-      18vmin 13vmin $pink4,
-      19vmin 13vmin $pink3,
-      20vmin 13vmin $pink3,
-      21vmin 13vmin $pink3,
-      22vmin 13vmin $pink3,
-      23vmin 13vmin $pink4,
-      24vmin 13vmin $pink4,
+      40vmin 12vmin $pink5,
+      41vmin 12vmin $pink5,
+      42vmin 12vmin $pink5,
+      43vmin 12vmin $pink4,
+      44vmin 12vmin $pink4,
+      18vmin 13vmin $pink5,
+      19vmin 13vmin $pink4,
+      20vmin 13vmin $pink4,
+      21vmin 13vmin $pink4,
+      22vmin 13vmin $pink4,
+      23vmin 13vmin $pink5,
+      24vmin 13vmin $pink5,
       29vmin 13vmin $grey1,
       30vmin 13vmin $grey1,
       31vmin 13vmin $white,
       32vmin 13vmin $white,
       33vmin 13vmin $grey1,
       34vmin 13vmin $grey1,
-      38vmin 13vmin $pink4,
-      39vmin 13vmin $pink4,
-      40vmin 13vmin $pink4,
-      41vmin 13vmin $pink3,
-      42vmin 13vmin $pink3,
-      43vmin 13vmin $pink3,
-      44vmin 13vmin $pink3,
-      18vmin 14vmin $pink4,
-      19vmin 14vmin $pink3,
-      20vmin 14vmin $pink3,
-      21vmin 14vmin $pink3,
-      22vmin 14vmin $pink3,
-      23vmin 14vmin $pink3,
-      24vmin 14vmin $pink3,
-      25vmin 14vmin $pink4,
-      26vmin 14vmin $pink4,
+      38vmin 13vmin $pink5,
+      39vmin 13vmin $pink5,
+      40vmin 13vmin $pink5,
+      41vmin 13vmin $pink4,
+      42vmin 13vmin $pink4,
+      43vmin 13vmin $pink4,
+      44vmin 13vmin $pink4,
+      18vmin 14vmin $pink5,
+      19vmin 14vmin $pink4,
+      20vmin 14vmin $pink4,
+      21vmin 14vmin $pink4,
+      22vmin 14vmin $pink4,
+      23vmin 14vmin $pink4,
+      24vmin 14vmin $pink4,
+      25vmin 14vmin $pink5,
+      26vmin 14vmin $pink5,
       28vmin 14vmin $grey1,
       29vmin 14vmin $grey1,
       30vmin 14vmin $grey1,
@@ -142,92 +144,92 @@ body {
       33vmin 14vmin $grey1,
       34vmin 14vmin $grey1,
       35vmin 14vmin $grey1,
-      37vmin 14vmin $pink4,
-      38vmin 14vmin $pink4,
-      39vmin 14vmin $pink3,
-      40vmin 14vmin $pink3,
-      41vmin 14vmin $pink3,
-      42vmin 14vmin $pink3,
-      43vmin 14vmin $pink3,
-      44vmin 14vmin $pink3,
-      18vmin 15vmin $pink4,
-      19vmin 15vmin $pink3,
-      20vmin 15vmin $pink3,
-      21vmin 15vmin $pink3,
-      22vmin 15vmin $pink3,
-      23vmin 15vmin $pink3,
-      24vmin 15vmin $pink3,
-      25vmin 15vmin $pink3,
-      26vmin 15vmin $pink3,
-      27vmin 15vmin $pink4,
+      37vmin 14vmin $pink5,
+      38vmin 14vmin $pink5,
+      39vmin 14vmin $pink4,
+      40vmin 14vmin $pink4,
+      41vmin 14vmin $pink4,
+      42vmin 14vmin $pink4,
+      43vmin 14vmin $pink4,
+      44vmin 14vmin $pink4,
+      18vmin 15vmin $pink5,
+      19vmin 15vmin $pink4,
+      20vmin 15vmin $pink4,
+      21vmin 15vmin $pink4,
+      22vmin 15vmin $pink4,
+      23vmin 15vmin $pink4,
+      24vmin 15vmin $pink4,
+      25vmin 15vmin $pink4,
+      26vmin 15vmin $pink4,
+      27vmin 15vmin $pink5,
       29vmin 15vmin $grey1,
       30vmin 15vmin $grey1,
       31vmin 15vmin $white,
       32vmin 15vmin $white,
       33vmin 15vmin $grey1,
       34vmin 15vmin $grey1,
-      36vmin 15vmin $pink4,
-      37vmin 15vmin $pink3,
-      38vmin 15vmin $pink3,
-      39vmin 15vmin $pink3,
-      40vmin 15vmin $pink3,
-      41vmin 15vmin $pink3,
-      42vmin 15vmin $pink3,
-      43vmin 15vmin $pink3,
-      44vmin 15vmin $pink3,
+      36vmin 15vmin $pink5,
+      37vmin 15vmin $pink4,
+      38vmin 15vmin $pink4,
+      39vmin 15vmin $pink4,
+      40vmin 15vmin $pink4,
+      41vmin 15vmin $pink4,
+      42vmin 15vmin $pink4,
+      43vmin 15vmin $pink4,
+      44vmin 15vmin $pink4,
 
-      18vmin 16vmin $pink4, /* 2nd last row of ears/horn start */
-      19vmin 16vmin $pink3,
-      20vmin 16vmin $pink3,
-      21vmin 16vmin $pink3,
-      22vmin 16vmin $pink3,
-      23vmin 16vmin $pink3,
-      24vmin 16vmin $pink3,
-      25vmin 16vmin $pink3,
-      26vmin 16vmin $pink3,
-      27vmin 16vmin $pink3,
+      18vmin 16vmin $pink5, /* 2nd last row of ears/horn start */
+      19vmin 16vmin $pink4,
+      20vmin 16vmin $pink4,
+      21vmin 16vmin $pink4,
+      22vmin 16vmin $pink4,
+      23vmin 16vmin $pink4,
+      24vmin 16vmin $pink4,
+      25vmin 16vmin $pink4,
+      26vmin 16vmin $pink4,
+      27vmin 16vmin $pink4,
       29vmin 16vmin $grey1,
       30vmin 16vmin $white,
       31vmin 16vmin $white,
       32vmin 16vmin $white,
       33vmin 16vmin $grey1,
       34vmin 16vmin $grey1,
-      36vmin 16vmin $pink3,
-      37vmin 16vmin $pink3,
-      38vmin 16vmin $pink3,
-      39vmin 16vmin $pink3,
-      40vmin 16vmin $pink3,
-      41vmin 16vmin $pink3,
-      42vmin 16vmin $pink3,
-      43vmin 16vmin $pink3,
-      44vmin 16vmin $pink3,
-      18vmin 17vmin $pink4,
-      19vmin 17vmin $pink4,
-      20vmin 17vmin $pink4,
-      21vmin 17vmin $pink4,
-      22vmin 17vmin $pink4,
-      23vmin 17vmin $pink4,
-      24vmin 17vmin $pink4,
-      25vmin 17vmin $pink4,
-      26vmin 17vmin $pink4,
-      27vmin 17vmin $pink4,
-      28vmin 17vmin $pink2,
+      36vmin 16vmin $pink4,
+      37vmin 16vmin $pink4,
+      38vmin 16vmin $pink4,
+      39vmin 16vmin $pink4,
+      40vmin 16vmin $pink4,
+      41vmin 16vmin $pink4,
+      42vmin 16vmin $pink4,
+      43vmin 16vmin $pink4,
+      44vmin 16vmin $pink4,
+      18vmin 17vmin $pink5,
+      19vmin 17vmin $pink5,
+      20vmin 17vmin $pink5,
+      21vmin 17vmin $pink5,
+      22vmin 17vmin $pink5,
+      23vmin 17vmin $pink5,
+      24vmin 17vmin $pink5,
+      25vmin 17vmin $pink5,
+      26vmin 17vmin $pink5,
+      27vmin 17vmin $pink5,
+      28vmin 17vmin $pink3,
       29vmin 17vmin $grey1,
       30vmin 17vmin $white,
       31vmin 17vmin $white,
       32vmin 17vmin $white,
       33vmin 17vmin $grey1,
       34vmin 17vmin $grey1,
-      35vmin 17vmin $pink2,
-      36vmin 17vmin $pink4,
-      37vmin 17vmin $pink4,
-      38vmin 17vmin $pink4,
-      39vmin 17vmin $pink4,
-      40vmin 17vmin $pink4,
-      41vmin 17vmin $pink4,
-      42vmin 17vmin $pink4,
-      43vmin 17vmin $pink4,
-      44vmin 17vmin $pink4,
+      35vmin 17vmin $pink3,
+      36vmin 17vmin $pink5,
+      37vmin 17vmin $pink5,
+      38vmin 17vmin $pink5,
+      39vmin 17vmin $pink5,
+      40vmin 17vmin $pink5,
+      41vmin 17vmin $pink5,
+      42vmin 17vmin $pink5,
+      43vmin 17vmin $pink5,
+      44vmin 17vmin $pink5,
 
       18vmin 18vmin $pink2, /* start of head */
       19vmin 18vmin $pink1,
@@ -333,18 +335,18 @@ body {
       37vmin 21vmin $pink1,
       38vmin 21vmin $pink1,
       39vmin 21vmin $pink1,
-      40vmin 21vmin $pink2,
+      40vmin 21vmin $pink3,
       41vmin 21vmin $pink1,
       42vmin 21vmin $pink2,
       43vmin 21vmin $pink1,
       44vmin 21vmin $pink1,
       18vmin 22vmin $pink2,
       19vmin 22vmin $pink1,
-      20vmin 22vmin $pink2i,
+      20vmin 22vmin $pink3,
       21vmin 22vmin $pink2,
-      22vmin 22vmin $pink1,
-      23vmin 22vmin $pink1,
-      24vmin 22vmin $pink1,
+      22vmin 22vmin $black,
+      23vmin 22vmin $black,
+      24vmin 22vmin $black,
       25vmin 22vmin $pink1,
       26vmin 22vmin $pink1,
       27vmin 22vmin $pink1,
@@ -358,13 +360,372 @@ body {
       35vmin 22vmin $pink1,
       36vmin 22vmin $pink1,
       37vmin 22vmin $pink1,
-      38vmin 22vmin $pink1,
-      39vmin 22vmin $pink1,
-      40vmin 22vmin $pink2,
-      41vmin 22vmin $pink1,
-      42vmin 22vmin $pink2,
+      38vmin 22vmin $black,
+      39vmin 22vmin $black,
+      40vmin 22vmin $black,
+      41vmin 22vmin $pink3,
+      42vmin 22vmin $pink1,
       43vmin 22vmin $pink1,
       44vmin 22vmin $pink1,
+      18vmin 23vmin $pink2,
+      19vmin 23vmin $grey1,
+      20vmin 23vmin $black,
+      21vmin 23vmin $white,
+      22vmin 23vmin $blue1,
+      23vmin 23vmin $black,
+      24vmin 23vmin $black,
+      25vmin 23vmin $black,
+      26vmin 23vmin $black,
+      27vmin 23vmin $pink1,
+      28vmin 23vmin $pink1,
+      29vmin 23vmin $pink1,
+      30vmin 23vmin $pink1,
+      31vmin 23vmin $pink1,
+      32vmin 23vmin $pink1,
+      33vmin 23vmin $pink1,
+      34vmin 23vmin $pink1,
+      35vmin 23vmin $pink1,
+      36vmin 23vmin $black,
+      37vmin 23vmin $black,
+      38vmin 23vmin $black,
+      39vmin 23vmin $black,
+      40vmin 23vmin $blue3,
+      41vmin 23vmin $blue3,
+      42vmin 23vmin $black,
+      43vmin 23vmin $pink3,
+      44vmin 23vmin $pink1,
+      18vmin 24vmin $pink2,
+      19vmin 24vmin $black,
+      20vmin 24vmin $white,
+      21vmin 24vmin $blue1,
+      22vmin 24vmin $white,
+      23vmin 24vmin $white,
+      24vmin 24vmin $black,
+      25vmin 24vmin $black,
+      26vmin 24vmin $black,
+      27vmin 24vmin $pink6,
+      28vmin 24vmin $pink1,
+      29vmin 24vmin $pink1,
+      30vmin 24vmin $pink1,
+      31vmin 24vmin $pink1,
+      32vmin 24vmin $pink1,
+      33vmin 24vmin $pink1,
+      34vmin 24vmin $pink1,
+      35vmin 24vmin $pink3,
+      36vmin 24vmin $white,
+      37vmin 24vmin $white,
+      38vmin 24vmin $black,
+      39vmin 24vmin $black,
+      40vmin 24vmin $black,
+      41vmin 24vmin $blue1,
+      42vmin 24vmin $blue1,
+      43vmin 24vmin $black,
+      44vmin 24vmin $pink1,
+
+      18vmin 25vmin $pink2, /* white part of face starts */
+      19vmin 25vmin $white,
+      20vmin 25vmin $blue1,
+      21vmin 25vmin $black,
+      22vmin 25vmin $white,
+      23vmin 25vmin $white,
+      24vmin 25vmin $black,
+      25vmin 25vmin $black,
+      26vmin 25vmin $black,
+      27vmin 25vmin $pink6,
+      28vmin 25vmin $white,
+      29vmin 25vmin $white,
+      30vmin 25vmin $white,
+      31vmin 25vmin $white,
+      32vmin 25vmin $white,
+      33vmin 25vmin $white,
+      34vmin 25vmin $white,
+      35vmin 25vmin $black,
+      36vmin 25vmin $white,
+      37vmin 25vmin $white,
+      38vmin 25vmin $black,
+      39vmin 25vmin $black,
+      40vmin 25vmin $black,
+      41vmin 25vmin $black,
+      42vmin 25vmin $blue1,
+      43vmin 25vmin $white,
+      44vmin 25vmin $pink1,
+      18vmin 26vmin $pink2,
+      19vmin 26vmin $white,
+      20vmin 26vmin $blue1,
+      21vmin 26vmin $black,
+      22vmin 26vmin $black,
+      23vmin 26vmin $black,
+      24vmin 26vmin $black,
+      25vmin 26vmin $black,
+      26vmin 26vmin $black,
+      27vmin 26vmin $pink6,
+      28vmin 26vmin $white,
+      29vmin 26vmin $white,
+      30vmin 26vmin $pink5,
+      31vmin 26vmin $pink5,
+      32vmin 26vmin $pink5,
+      33vmin 26vmin $white,
+      34vmin 26vmin $white,
+      35vmin 26vmin $black,
+      36vmin 26vmin $black,
+      37vmin 26vmin $black,
+      38vmin 26vmin $black,
+      39vmin 26vmin $black,
+      40vmin 26vmin $black,
+      41vmin 26vmin $black,
+      42vmin 26vmin $blue1,
+      43vmin 26vmin $white,
+      44vmin 26vmin $pink1,
+      18vmin 27vmin $pink2,
+      19vmin 27vmin $white,
+      20vmin 27vmin $blue1,
+      21vmin 27vmin $black,
+      22vmin 27vmin $black,
+      23vmin 27vmin $black,
+      24vmin 27vmin $black,
+      25vmin 27vmin $black,
+      26vmin 27vmin $black,
+      27vmin 27vmin $black,
+      28vmin 27vmin $white,
+      29vmin 27vmin $white,
+      30vmin 27vmin $pink5,
+      31vmin 27vmin $pink5,
+      32vmin 27vmin $pink6,
+      33vmin 27vmin $white,
+      34vmin 27vmin $white,
+      35vmin 27vmin $black,
+      36vmin 27vmin $black,
+      37vmin 27vmin $black,
+      38vmin 27vmin $black,
+      39vmin 27vmin $black,
+      40vmin 27vmin $black,
+      41vmin 27vmin $black,
+      42vmin 27vmin $blue1,
+      43vmin 27vmin $white,
+      44vmin 27vmin $pink1,
+      18vmin 28vmin $pink2,
+      19vmin 28vmin $white,
+      20vmin 28vmin $blue1,
+      21vmin 28vmin $blue1,
+      22vmin 28vmin $black,
+      23vmin 28vmin $black,
+      24vmin 28vmin $black,
+      25vmin 28vmin $black,
+      26vmin 28vmin $blue3,
+      27vmin 28vmin $blue3,
+      28vmin 28vmin $white,
+      29vmin 28vmin $white,
+      30vmin 28vmin $white,
+      31vmin 28vmin $white,
+      32vmin 28vmin $white,
+      33vmin 28vmin $white,
+      34vmin 28vmin $white,
+      35vmin 28vmin $blue1,
+      36vmin 28vmin $black,
+      37vmin 28vmin $black,
+      38vmin 28vmin $black,
+      39vmin 28vmin $black,
+      40vmin 28vmin $black,
+      41vmin 28vmin $blue1,
+      42vmin 28vmin $blue1,
+      43vmin 28vmin $white,
+      44vmin 28vmin $pink1,
+      18vmin 29vmin $pink2,
+      19vmin 29vmin $white,
+      20vmin 29vmin $white,
+      21vmin 29vmin $blue1,
+      22vmin 29vmin $blue1,
+      23vmin 29vmin $black,
+      24vmin 29vmin $black,
+      25vmin 29vmin $black,
+      26vmin 29vmin $blue1,
+      27vmin 29vmin $white,
+      28vmin 29vmin $white,
+      29vmin 29vmin $pink6,
+      30vmin 29vmin $pink6,
+      31vmin 29vmin $pink6,
+      32vmin 29vmin $pink6,
+      33vmin 29vmin $pink6,
+      34vmin 29vmin $white,
+      35vmin 29vmin $white,
+      36vmin 29vmin $blue3,
+      37vmin 29vmin $black,
+      38vmin 29vmin $black,
+      39vmin 29vmin $black,
+      40vmin 29vmin $black,
+      41vmin 29vmin $blue1,
+      42vmin 29vmin $white,
+      43vmin 29vmin $white,
+      44vmin 29vmin $pink1,
+
+      18vmin 30vmin $grey1, /* cheeks start */
+      19vmin 30vmin $pink5,
+      20vmin 30vmin $pink5,
+      21vmin 30vmin $white,
+      22vmin 30vmin $blue1,
+      23vmin 30vmin $blue1,
+      24vmin 30vmin $blue1,
+      25vmin 30vmin $blue1,
+      26vmin 30vmin $white,
+      27vmin 30vmin $white,
+      28vmin 30vmin $white,
+      29vmin 30vmin $pink3,
+      30vmin 30vmin $pink6,
+      31vmin 30vmin $pink6,
+      32vmin 30vmin $pink6,
+      33vmin 30vmin $pink3,
+      34vmin 30vmin $white,
+      35vmin 30vmin $white,
+      36vmin 30vmin $white,
+      37vmin 30vmin $blue3,
+      38vmin 30vmin $blue3,
+      39vmin 30vmin $blue3,
+      40vmin 30vmin $blue3,
+      41vmin 30vmin $white,
+      42vmin 30vmin $pink5,
+      43vmin 30vmin $pink5,
+      44vmin 30vmin $grey1,
+      18vmin 31vmin $grey1,
+      19vmin 31vmin $pink5,
+      20vmin 31vmin $pink5,
+      21vmin 31vmin $white,
+      22vmin 31vmin $white,
+      23vmin 31vmin $white,
+      24vmin 31vmin $white,
+      25vmin 31vmin $white,
+      26vmin 31vmin $white,
+      27vmin 31vmin $white,
+      28vmin 31vmin $white,
+      29vmin 31vmin $white,
+      30vmin 31vmin $pink5,
+      32vmin 31vmin $pink5,
+      31vmin 31vmin $pink5,
+      33vmin 31vmin $white,
+      34vmin 31vmin $white,
+      35vmin 31vmin $white,
+      36vmin 31vmin $white,
+      37vmin 31vmin $white,
+      38vmin 31vmin $white,
+      39vmin 31vmin $white,
+      40vmin 31vmin $white,
+      41vmin 31vmin $white,
+      42vmin 31vmin $pink5,
+      43vmin 31vmin $pink5,
+      44vmin 31vmin $grey1,
+
+      7vmin 32vmin $grey2,  /* tail start */
+      8vmin 32vmin $grey2,
+      9vmin 32vmin $grey2,
+      10vmin 32vmin $grey2,
+      11vmin 32vmin $grey2,
+      12vmin 32vmin $grey2,
+      13vmin 32vmin $grey2,
+      18vmin 32vmin $grey1,
+      19vmin 32vmin $white,
+      20vmin 32vmin $white,
+      21vmin 32vmin $white,
+      22vmin 32vmin $white,
+      23vmin 32vmin $white,
+      24vmin 32vmin $white,
+      25vmin 32vmin $white,
+      26vmin 32vmin $white,
+      27vmin 32vmin $white,
+      28vmin 32vmin $white,
+      29vmin 32vmin $white,
+      30vmin 32vmin $white,
+      32vmin 32vmin $white,
+      31vmin 32vmin $white,
+      33vmin 32vmin $white,
+      34vmin 32vmin $white,
+      35vmin 32vmin $white,
+      36vmin 32vmin $white,
+      37vmin 32vmin $white,
+      38vmin 32vmin $white,
+      39vmin 32vmin $white,
+      40vmin 32vmin $white,
+      41vmin 32vmin $white,
+      42vmin 32vmin $white,
+      43vmin 32vmin $white,
+      44vmin 32vmin $grey1,
+      5vmin 33vmin $grey2,
+      6vmin 33vmin $grey2,
+      7vmin 33vmin $grey1,
+      8vmin 33vmin $grey1,
+      9vmin 33vmin $grey1,
+      10vmin 33vmin $grey1,
+      11vmin 33vmin $grey1,
+      12vmin 33vmin $grey1,
+      13vmin 33vmin $grey2,
+      14vmin 33vmin $grey2,
+      15vmin 33vmin $grey2,
+      16vmin 33vmin $grey2,
+      18vmin 33vmin $grey1,
+      19vmin 33vmin $white,
+      20vmin 33vmin $white,
+      21vmin 33vmin $white,
+      22vmin 33vmin $white,
+      23vmin 33vmin $white,
+      24vmin 33vmin $white,
+      25vmin 33vmin $white,
+      26vmin 33vmin $white,
+      27vmin 33vmin $white,
+      28vmin 33vmin $white,
+      29vmin 33vmin $white,
+      30vmin 33vmin $white,
+      32vmin 33vmin $white,
+      31vmin 33vmin $white,
+      33vmin 33vmin $white,
+      34vmin 33vmin $white,
+      35vmin 33vmin $white,
+      36vmin 33vmin $white,
+      37vmin 33vmin $white,
+      38vmin 33vmin $white,
+      39vmin 33vmin $white,
+      40vmin 33vmin $white,
+      41vmin 33vmin $white,
+      42vmin 33vmin $white,
+      43vmin 33vmin $white,
+      44vmin 33vmin $grey1,
+      4vmin 34vmin $grey2,
+      5vmin 34vmin $grey1,
+      6vmin 34vmin $grey1,
+      7vmin 34vmin $white,
+      8vmin 34vmin $white,
+      9vmin 34vmin $white,
+      10vmin 34vmin $white,
+      10vmin 34vmin $white,
+      11vmin 34vmin $white,
+      12vmin 34vmin $white,
+      13vmin 34vmin $grey1,
+      14vmin 34vmin $grey1,
+      15vmin 34vmin $grey2,
+      16vmin 34vmin $grey2,
+      19vmin 34vmin $grey1,
+      20vmin 34vmin $grey1,
+      21vmin 34vmin $grey1,
+      22vmin 34vmin $grey1,
+      23vmin 34vmin $grey1,
+      24vmin 34vmin $grey1,
+      25vmin 34vmin $grey1,
+      26vmin 34vmin $grey1,
+      27vmin 34vmin $grey2,
+      28vmin 34vmin $grey2,
+      29vmin 34vmin $grey2,
+      30vmin 34vmin $grey2,
+      32vmin 34vmin $grey2,
+      31vmin 34vmin $grey2,
+      33vmin 34vmin $grey2,
+      34vmin 34vmin $grey2,
+      35vmin 34vmin $grey2,
+      36vmin 34vmin $grey1,
+      37vmin 34vmin $grey1,
+      38vmin 34vmin $grey1,
+      39vmin 34vmin $grey1,
+      40vmin 34vmin $grey1,
+      41vmin 34vmin $grey1,
+      42vmin 34vmin $grey1,
+      43vmin 34vmin $grey1,
+      44vmin 34vmin $grey1,
       ;
   }
 }
