more than 50% now

--- a/styles/_unikitty.scss
+++ b/styles/_unikitty.scss
@@ -59,6 +59,7 @@ body {
       31vmin 7vmin $blue2,
       32vmin 7vmin $blue1,
       33vmin 7vmin $blue2,
+      34vmin 7vmin $blue3,
       30vmin 8vmin $blue1,
       31vmin 8vmin $blue2,
       32vmin 8vmin $blue1,
@@ -698,34 +699,135 @@ body {
       12vmin 34vmin $white,
       13vmin 34vmin $grey1,
       14vmin 34vmin $grey1,
-      15vmin 34vmin $grey2,
+      15vmin 34vmin $grey1,
       16vmin 34vmin $grey2,
-      19vmin 34vmin $grey1,
-      20vmin 34vmin $grey1,
-      21vmin 34vmin $grey1,
-      22vmin 34vmin $grey1,
-      23vmin 34vmin $grey1,
-      24vmin 34vmin $grey1,
-      25vmin 34vmin $grey1,
-      26vmin 34vmin $grey1,
-      27vmin 34vmin $grey2,
-      28vmin 34vmin $grey2,
-      29vmin 34vmin $grey2,
-      30vmin 34vmin $grey2,
-      32vmin 34vmin $grey2,
-      31vmin 34vmin $grey2,
-      33vmin 34vmin $grey2,
-      34vmin 34vmin $grey2,
-      35vmin 34vmin $grey2,
-      36vmin 34vmin $grey1,
-      37vmin 34vmin $grey1,
-      38vmin 34vmin $grey1,
-      39vmin 34vmin $grey1,
-      40vmin 34vmin $grey1,
-      41vmin 34vmin $grey1,
-      42vmin 34vmin $grey1,
-      43vmin 34vmin $grey1,
+      18vmin 34vmin $grey1,
+      19vmin 34vmin $white,
+      20vmin 34vmin $white,
+      21vmin 34vmin $white,
+      22vmin 34vmin $white,
+      23vmin 34vmin $white,
+      24vmin 34vmin $white,
+      25vmin 34vmin $white,
+      26vmin 34vmin $white,
+      27vmin 34vmin $white,
+      28vmin 34vmin $white,
+      29vmin 34vmin $white,
+      30vmin 34vmin $white,
+      32vmin 34vmin $white,
+      31vmin 34vmin $white,
+      33vmin 34vmin $white,
+      34vmin 34vmin $white,
+      35vmin 34vmin $white,
+      36vmin 34vmin $white,
+      37vmin 34vmin $white,
+      38vmin 34vmin $white,
+      39vmin 34vmin $white,
+      40vmin 34vmin $white,
+      41vmin 34vmin $white,
+      42vmin 34vmin $white,
+      43vmin 34vmin $white,
       44vmin 34vmin $grey1,
+
+      3vmin 35vmin $grey2, /* last row of head starts */
+      4vmin 35vmin $grey1,
+      5vmin 35vmin $white,
+      6vmin 35vmin $white,
+      7vmin 35vmin $blue2,
+      8vmin 35vmin $blue2,
+      9vmin 35vmin $blue2,
+      10vmin 35vmin $blue2,
+      10vmin 35vmin $blue2,
+      11vmin 35vmin $blue2,
+      12vmin 35vmin $blue2,
+      13vmin 35vmin $blue2,
+      14vmin 35vmin $grey1,
+      15vmin 35vmin $grey1,
+      16vmin 35vmin $grey1,
+      17vmin 35vmin $grey2,
+      18vmin 35vmin $grey1,
+      19vmin 35vmin $grey1,
+      20vmin 35vmin $grey1,
+      21vmin 35vmin $grey1,
+      22vmin 35vmin $grey1,
+      23vmin 35vmin $grey1,
+      24vmin 35vmin $grey1,
+      25vmin 35vmin $grey1,
+      26vmin 35vmin $grey1,
+      27vmin 35vmin $grey2,
+      28vmin 35vmin $grey2,
+      29vmin 35vmin $grey2,
+      30vmin 35vmin $grey2,
+      32vmin 35vmin $grey2,
+      31vmin 35vmin $grey2,
+      33vmin 35vmin $grey2,
+      34vmin 35vmin $grey2,
+      35vmin 35vmin $grey2,
+      36vmin 35vmin $grey1,
+      37vmin 35vmin $grey1,
+      38vmin 35vmin $grey2,
+      39vmin 35vmin $grey2,
+      40vmin 35vmin $grey2,
+      41vmin 35vmin $grey2,
+      42vmin 35vmin $grey1,
+      43vmin 35vmin $grey1,
+      44vmin 35vmin $grey1,
+      2vmin 36vmin $grey2,
+      3vmin 36vmin $grey1,
+      4vmin 36vmin $white,
+      5vmin 36vmin $blue2,
+      6vmin 36vmin $blue2,
+      7vmin 36vmin $blue2,
+      8vmin 36vmin $blue2,
+      9vmin 36vmin $blue2,
+      10vmin 36vmin $blue2,
+      10vmin 36vmin $blue2,
+      11vmin 36vmin $blue2,
+      12vmin 36vmin $blue2,
+      13vmin 36vmin $blue2,
+      14vmin 36vmin $blue2,
+      15vmin 36vmin $grey1,
+      16vmin 36vmin $grey1,
+      17vmin 36vmin $grey2,
+      28vmin 36vmin $green2,
+      29vmin 36vmin $green2,
+      30vmin 36vmin $green2,
+      32vmin 36vmin $green1,
+      31vmin 36vmin $green1,
+      33vmin 36vmin $green1,
+      34vmin 36vmin $green2,
+      35vmin 36vmin $green2,
+      2vmin 37vmin $grey2,
+      3vmin 37vmin $grey1,
+      4vmin 37vmin $blue2,
+      5vmin 37vmin $blue2,
+      6vmin 37vmin $blue2,
+      7vmin 37vmin $blue2,
+      8vmin 37vmin $blue2,
+      9vmin 37vmin $blue2,
+      10vmin 37vmin $blue2,
+      10vmin 37vmin $blue2,
+      11vmin 37vmin $blue2,
+      12vmin 37vmin $blue2,
+      13vmin 37vmin $blue2,
+      14vmin 37vmin $blue2,
+      15vmin 37vmin $blue2,
+      16vmin 37vmin $grey1,
+      17vmin 37vmin $grey2,
+      18vmin 37vmin $grey2,
+      21vmin 37vmin $pink5,
+      22vmin 37vmin $pink5,
+      23vmin 37vmin $pink2,
+      24vmin 37vmin $pink2,
+      25vmin 37vmin $pink5,
+      28vmin 37vmin $green2,
+      29vmin 37vmin $green2,
+      30vmin 37vmin $green2,
+      32vmin 37vmin $green1,
+      31vmin 37vmin $green1,
+      33vmin 37vmin $green1,
+      34vmin 37vmin $green2,
+      35vmin 37vmin $green2,
       ;
   }
 }
