--- a/styles/_unikitty.scss
+++ b/styles/_unikitty.scss
@@ -687,7 +687,7 @@ body {
       42vmin 33vmin $white,
       43vmin 33vmin $white,
       44vmin 33vmin $grey1,
-      4vmin 34vmin $grey2,
+      4vmin 34vmin $grey1,
       5vmin 34vmin $grey1,
       6vmin 34vmin $grey1,
       7vmin 34vmin $white,
@@ -729,7 +729,7 @@ body {
       43vmin 34vmin $white,
       44vmin 34vmin $grey1,
 
-      3vmin 35vmin $grey2, /* last row of head starts */
+      3vmin 35vmin $grey1, /* last row of head starts */
       4vmin 35vmin $grey1,
       5vmin 35vmin $white,
       6vmin 35vmin $white,
@@ -816,18 +816,531 @@ body {
       17vmin 37vmin $grey2,
       18vmin 37vmin $grey2,
       21vmin 37vmin $pink5,
-      22vmin 37vmin $pink5,
-      23vmin 37vmin $pink2,
-      24vmin 37vmin $pink2,
+      22vmin 37vmin $pink2,
+      23vmin 37vmin $pink1,
+      24vmin 37vmin $pink1,
       25vmin 37vmin $pink5,
-      28vmin 37vmin $green2,
       29vmin 37vmin $green2,
-      30vmin 37vmin $green2,
+      30vmin 37vmin $green1,
       32vmin 37vmin $green1,
       31vmin 37vmin $green1,
       33vmin 37vmin $green1,
       34vmin 37vmin $green2,
-      35vmin 37vmin $green2,
+      1vmin 38vmin $grey2,
+      2vmin 38vmin $grey1,
+      3vmin 38vmin $white,
+      4vmin 38vmin $blue2,
+      5vmin 38vmin $blue2,
+      6vmin 38vmin $blue2,
+      7vmin 38vmin $blue2,
+      8vmin 38vmin $blue2,
+      9vmin 38vmin $grey2,
+      11vmin 38vmin $blue3,
+      12vmin 38vmin $blue2,
+      13vmin 38vmin $blue2,
+      14vmin 38vmin $blue2,
+      15vmin 38vmin $blue2,
+      16vmin 38vmin $white,
+      17vmin 38vmin $grey1,
+      18vmin 38vmin $grey2,
+      21vmin 38vmin $pink5,
+      22vmin 38vmin $pink2,
+      23vmin 38vmin $pink2,
+      24vmin 38vmin $pink2,
+      25vmin 38vmin $pink5,
+      29vmin 38vmin $green2,
+      30vmin 38vmin $green1,
+      32vmin 38vmin $green1,
+      31vmin 38vmin $green1,
+      33vmin 38vmin $green1,
+      34vmin 38vmin $green2,
+
+      1vmin 39vmin $grey2, /* body starts */
+      2vmin 39vmin $white,
+      3vmin 39vmin $blue2,
+      4vmin 39vmin $blue2,
+      5vmin 39vmin $blue2,
+      6vmin 39vmin $blue2,
+      7vmin 39vmin $blue2,
+      8vmin 39vmin $blue2,
+      9vmin 39vmin $pink3,
+      10vmin 39vmin $pink1,
+      11vmin 39vmin $pink1,
+      12vmin 39vmin $pink1,
+      13vmin 39vmin $pink1,
+      14vmin 39vmin $pink1,
+      15vmin 39vmin $pink1,
+      16vmin 39vmin $pink1,
+      17vmin 39vmin $pink1,
+      18vmin 39vmin $pink1,
+      19vmin 39vmin $pink1,
+      20vmin 39vmin $pink1,
+      21vmin 39vmin $pink1,
+      22vmin 39vmin $pink1,
+      23vmin 39vmin $pink1,
+      24vmin 39vmin $pink1,
+      25vmin 39vmin $pink1,
+      26vmin 39vmin $pink1,
+      27vmin 39vmin $pink1,
+      28vmin 39vmin $pink1,
+      29vmin 39vmin $pink1,
+      30vmin 39vmin $pink1,
+      32vmin 39vmin $pink1,
+      31vmin 39vmin $pink1,
+      33vmin 39vmin $pink1,
+      34vmin 39vmin $pink1,
+      35vmin 39vmin $pink1,
+      1vmin 40vmin $grey2,
+      2vmin 40vmin $white,
+      3vmin 40vmin $blue2,
+      4vmin 40vmin $blue2,
+      5vmin 40vmin $blue2,
+      6vmin 40vmin $blue2,
+      7vmin 40vmin $blue2,
+      8vmin 40vmin $blue2,
+      9vmin 40vmin $pink3,
+      10vmin 40vmin $pink1,
+      11vmin 40vmin $pink1,
+      12vmin 40vmin $pink1,
+      13vmin 40vmin $pink1,
+      14vmin 40vmin $pink1,
+      15vmin 40vmin $pink1,
+      16vmin 40vmin $pink1,
+      17vmin 40vmin $pink1,
+      18vmin 40vmin $pink1,
+      19vmin 40vmin $pink1,
+      20vmin 40vmin $pink1,
+      21vmin 40vmin $pink1,
+      22vmin 40vmin $pink1,
+      23vmin 40vmin $pink1,
+      24vmin 40vmin $pink1,
+      25vmin 40vmin $pink1,
+      26vmin 40vmin $pink1,
+      27vmin 40vmin $pink1,
+      28vmin 40vmin $pink1,
+      29vmin 40vmin $pink1,
+      30vmin 40vmin $pink1,
+      32vmin 40vmin $pink1,
+      31vmin 40vmin $pink1,
+      33vmin 40vmin $pink1,
+      34vmin 40vmin $pink1,
+      35vmin 40vmin $pink1,
+      1vmin 41vmin $grey2,
+      2vmin 41vmin $blue2,
+      3vmin 41vmin $blue2,
+      4vmin 41vmin $blue2,
+      5vmin 41vmin $blue2,
+      6vmin 41vmin $blue2,
+      7vmin 41vmin $blue2,
+      8vmin 41vmin $blue2,
+      9vmin 41vmin $pink3,
+      10vmin 41vmin $pink1,
+      11vmin 41vmin $pink1,
+      12vmin 41vmin $pink1,
+      13vmin 41vmin $pink1,
+      14vmin 41vmin $pink1,
+      15vmin 41vmin $pink1,
+      16vmin 41vmin $pink1,
+      17vmin 41vmin $pink1,
+      18vmin 41vmin $pink1,
+      19vmin 41vmin $pink1,
+      20vmin 41vmin $pink1,
+      21vmin 41vmin $pink1,
+      22vmin 41vmin $pink1,
+      23vmin 41vmin $pink1,
+      24vmin 41vmin $pink1,
+      25vmin 41vmin $pink1,
+      26vmin 41vmin $pink1,
+      27vmin 41vmin $pink1,
+      28vmin 41vmin $pink1,
+      29vmin 41vmin $pink1,
+      30vmin 41vmin $pink1,
+      32vmin 41vmin $pink1,
+      31vmin 41vmin $pink1,
+      33vmin 41vmin $pink1,
+      34vmin 41vmin $pink1,
+      35vmin 41vmin $pink1,
+      2vmin 42vmin $grey1,
+      3vmin 42vmin $blue2,
+      4vmin 42vmin $blue2,
+      5vmin 42vmin $blue2,
+      6vmin 42vmin $blue2,
+      7vmin 42vmin $blue2,
+      8vmin 42vmin $blue2,
+      9vmin 42vmin $pink3,
+      10vmin 42vmin $pink1,
+      11vmin 42vmin $pink1,
+      12vmin 42vmin $pink1,
+      13vmin 42vmin $pink1,
+      14vmin 42vmin $pink1,
+      15vmin 42vmin $pink1,
+      16vmin 42vmin $pink1,
+      17vmin 42vmin $pink1,
+      18vmin 42vmin $pink1,
+      19vmin 42vmin $pink1,
+      20vmin 42vmin $pink1,
+      21vmin 42vmin $pink1,
+      22vmin 42vmin $pink1,
+      23vmin 42vmin $pink1,
+      24vmin 42vmin $pink1,
+      25vmin 42vmin $pink1,
+      26vmin 42vmin $pink1,
+      27vmin 42vmin $pink1,
+      28vmin 42vmin $pink1,
+      29vmin 42vmin $pink1,
+      30vmin 42vmin $pink1,
+      32vmin 42vmin $pink1,
+      31vmin 42vmin $pink1,
+      33vmin 42vmin $pink1,
+      34vmin 42vmin $pink1,
+      35vmin 42vmin $pink1,
+
+      2vmin 43vmin $grey1, /* legs start to appear here */
+      3vmin 43vmin $blue2,
+      4vmin 43vmin $blue2,
+      5vmin 43vmin $blue2,
+      6vmin 43vmin $blue2,
+      7vmin 43vmin $blue2,
+      8vmin 43vmin $blue2,
+      9vmin 43vmin $pink3,
+      10vmin 43vmin $pink1,
+      11vmin 43vmin $pink1,
+      12vmin 43vmin $pink1,
+      13vmin 43vmin $pink1,
+      14vmin 43vmin $pink1,
+      15vmin 43vmin $pink1,
+      16vmin 43vmin $pink1,
+      17vmin 43vmin $pink1,
+      18vmin 43vmin $pink1,
+      19vmin 43vmin $pink1,
+      20vmin 43vmin $pink1,
+      21vmin 43vmin $pink2,
+      25vmin 43vmin $pink2,
+      26vmin 43vmin $pink1,
+      27vmin 43vmin $pink1,
+      28vmin 43vmin $pink1,
+      29vmin 43vmin $pink1,
+      30vmin 43vmin $pink1,
+      32vmin 43vmin $pink1,
+      31vmin 43vmin $pink1,
+      33vmin 43vmin $pink1,
+      34vmin 43vmin $pink1,
+      35vmin 43vmin $pink1,
+      4vmin 44vmin $blue2,
+      5vmin 44vmin $blue2,
+      6vmin 44vmin $blue2,
+      7vmin 44vmin $blue2,
+      8vmin 44vmin $blue2,
+      9vmin 44vmin $pink3,
+      10vmin 44vmin $pink1,
+      11vmin 44vmin $pink1,
+      12vmin 44vmin $pink1,
+      13vmin 44vmin $pink1,
+      14vmin 44vmin $pink1,
+      15vmin 44vmin $pink1,
+      16vmin 44vmin $pink1,
+      17vmin 44vmin $pink1,
+      18vmin 44vmin $pink1,
+      19vmin 44vmin $pink1,
+      27vmin 44vmin $pink2,
+      28vmin 44vmin $pink1,
+      29vmin 44vmin $pink1,
+      30vmin 44vmin $pink1,
+      32vmin 44vmin $pink1,
+      31vmin 44vmin $pink1,
+      33vmin 44vmin $pink1,
+      34vmin 44vmin $pink1,
+      35vmin 44vmin $pink1,
+      5vmin 45vmin $blue2,
+      6vmin 45vmin $blue2,
+      7vmin 45vmin $blue2,
+      8vmin 45vmin $blue2,
+      9vmin 45vmin $pink3,
+      10vmin 45vmin $pink1,
+      11vmin 45vmin $pink1,
+      12vmin 45vmin $pink1,
+      13vmin 45vmin $pink1,
+      14vmin 45vmin $pink1,
+      15vmin 45vmin $pink1,
+      16vmin 45vmin $pink1,
+      17vmin 45vmin $pink1,
+      18vmin 45vmin $pink1,
+      28vmin 45vmin $pink1,
+      29vmin 45vmin $pink1,
+      30vmin 45vmin $pink1,
+      32vmin 45vmin $pink1,
+      31vmin 45vmin $pink1,
+      33vmin 45vmin $pink1,
+      34vmin 45vmin $pink1,
+      35vmin 45vmin $pink1,
+      1vmin 46vmin $grey2,
+      5vmin 46vmin $blue2,
+      6vmin 46vmin $blue2,
+      7vmin 46vmin $blue2,
+      8vmin 46vmin $blue2,
+      9vmin 46vmin $pink3,
+      10vmin 46vmin $pink1,
+      11vmin 46vmin $pink1,
+      12vmin 46vmin $pink1,
+      13vmin 46vmin $pink1,
+      14vmin 46vmin $pink1,
+      15vmin 46vmin $pink1,
+      16vmin 46vmin $pink1,
+      17vmin 46vmin $pink1,
+      29vmin 46vmin $pink1,
+      30vmin 46vmin $pink1,
+      32vmin 46vmin $pink1,
+      31vmin 46vmin $pink1,
+      33vmin 46vmin $pink1,
+      34vmin 46vmin $pink1,
+      35vmin 46vmin $pink1,
+      0vmin 47vmin $grey1,
+      1vmin 47vmin $grey1,
+      2vmin 47vmin $grey1,
+      3vmin 47vmin $grey2,
+      5vmin 47vmin $blue2,
+      6vmin 47vmin $blue2,
+      7vmin 47vmin $blue2,
+      8vmin 47vmin $blue2,
+      9vmin 47vmin $pink3,
+      10vmin 47vmin $pink1,
+      11vmin 47vmin $pink1,
+      12vmin 47vmin $pink1,
+      13vmin 47vmin $pink1,
+      14vmin 47vmin $pink1,
+      15vmin 47vmin $pink1,
+      16vmin 47vmin $pink1,
+      17vmin 47vmin $pink1,
+      29vmin 47vmin $pink1,
+      30vmin 47vmin $pink1,
+      32vmin 47vmin $pink1,
+      31vmin 47vmin $pink1,
+      33vmin 47vmin $pink1,
+      34vmin 47vmin $pink1,
+      35vmin 47vmin $pink1,
+      0vmin 48vmin $grey1,
+      1vmin 48vmin $grey1,
+      2vmin 48vmin $grey1,
+      3vmin 48vmin $grey1,
+      4vmin 48vmin $blue1,
+      5vmin 48vmin $blue2,
+      6vmin 48vmin $blue2,
+      7vmin 48vmin $blue2,
+      8vmin 48vmin $blue2,
+      9vmin 48vmin $pink3,
+      10vmin 48vmin $pink1,
+      11vmin 48vmin $pink1,
+      12vmin 48vmin $pink1,
+      13vmin 48vmin $pink1,
+      14vmin 48vmin $pink1,
+      15vmin 48vmin $pink1,
+      16vmin 48vmin $pink1,
+      17vmin 48vmin $pink1,
+      29vmin 48vmin $pink1,
+      30vmin 48vmin $pink1,
+      32vmin 48vmin $pink1,
+      31vmin 48vmin $pink1,
+      33vmin 48vmin $pink1,
+      34vmin 48vmin $pink1,
+      35vmin 48vmin $pink1,
+      0vmin 49vmin $grey2,
+      1vmin 49vmin $blue2,
+      2vmin 49vmin $grey1,
+      3vmin 49vmin $blue1,
+      4vmin 49vmin $blue2,
+      5vmin 49vmin $blue2,
+      6vmin 49vmin $blue2,
+      7vmin 49vmin $blue2,
+      8vmin 49vmin $blue2,
+      9vmin 49vmin $pink3,
+      10vmin 49vmin $pink1,
+      11vmin 49vmin $pink1,
+      12vmin 49vmin $pink1,
+      13vmin 49vmin $pink1,
+      14vmin 49vmin $pink1,
+      15vmin 49vmin $pink1,
+      16vmin 49vmin $pink1,
+      17vmin 49vmin $pink1,
+      29vmin 49vmin $pink1,
+      30vmin 49vmin $pink1,
+      32vmin 49vmin $pink1,
+      31vmin 49vmin $pink1,
+      33vmin 49vmin $pink1,
+      34vmin 49vmin $pink1,
+      35vmin 49vmin $pink1,
+      0vmin 50vmin $grey2,
+      1vmin 50vmin $blue2,
+      2vmin 50vmin $blue2,
+      3vmin 50vmin $blue2,
+      4vmin 50vmin $blue2,
+      5vmin 50vmin $blue2,
+      6vmin 50vmin $blue2,
+      7vmin 50vmin $blue2,
+      8vmin 50vmin $blue2,
+      9vmin 50vmin $pink3,
+      10vmin 50vmin $pink1,
+      11vmin 50vmin $pink1,
+      12vmin 50vmin $pink1,
+      13vmin 50vmin $pink1,
+      14vmin 50vmin $pink1,
+      15vmin 50vmin $pink1,
+      16vmin 50vmin $pink1,
+      17vmin 50vmin $pink1,
+      29vmin 50vmin $pink1,
+      30vmin 50vmin $pink1,
+      32vmin 50vmin $pink1,
+      31vmin 50vmin $pink1,
+      33vmin 50vmin $pink1,
+      34vmin 50vmin $pink1,
+      35vmin 50vmin $pink1,
+
+      1vmin 51vmin $grey2, /* coloured part of legs start */
+      2vmin 51vmin $blue2,
+      3vmin 51vmin $blue2,
+      4vmin 51vmin $blue2,
+      5vmin 51vmin $blue2,
+      6vmin 51vmin $blue2,
+      7vmin 51vmin $blue2,
+      8vmin 51vmin $blue2,
+      9vmin 51vmin $grey2,
+      10vmin 51vmin $white,
+      11vmin 51vmin $white,
+      12vmin 51vmin $white,
+      13vmin 51vmin $white,
+      14vmin 51vmin $white,
+      15vmin 51vmin $white,
+      16vmin 51vmin $white,
+      17vmin 51vmin $white,
+      29vmin 51vmin $white,
+      30vmin 51vmin $white,
+      32vmin 51vmin $white,
+      31vmin 51vmin $white,
+      33vmin 51vmin $white,
+      34vmin 51vmin $white,
+      35vmin 51vmin $white,
+      1vmin 52vmin $grey2,
+      2vmin 52vmin $blue2,
+      3vmin 52vmin $blue2,
+      4vmin 52vmin $blue2,
+      5vmin 52vmin $blue2,
+      6vmin 52vmin $blue2,
+      7vmin 52vmin $blue2,
+      8vmin 52vmin $grey2,
+      10vmin 52vmin $white,
+      11vmin 52vmin $white,
+      12vmin 52vmin $white,
+      13vmin 52vmin $white,
+      14vmin 52vmin $white,
+      15vmin 52vmin $white,
+      16vmin 52vmin $white,
+      17vmin 52vmin $white,
+      29vmin 52vmin $white,
+      30vmin 52vmin $white,
+      32vmin 52vmin $white,
+      31vmin 52vmin $white,
+      33vmin 52vmin $white,
+      34vmin 52vmin $white,
+      35vmin 52vmin $white,
+      2vmin 53vmin $grey1,
+      3vmin 53vmin $blue2,
+      4vmin 53vmin $blue2,
+      5vmin 53vmin $blue2,
+      6vmin 53vmin $blue2,
+      7vmin 53vmin $grey2,
+      10vmin 53vmin $white,
+      11vmin 53vmin $white,
+      12vmin 53vmin $white,
+      13vmin 53vmin $white,
+      14vmin 53vmin $white,
+      15vmin 53vmin $white,
+      16vmin 53vmin $white,
+      17vmin 53vmin $white,
+      29vmin 53vmin $white,
+      30vmin 53vmin $white,
+      32vmin 53vmin $white,
+      31vmin 53vmin $white,
+      33vmin 53vmin $white,
+      34vmin 53vmin $white,
+      35vmin 53vmin $white,
+      3vmin 54vmin $grey1,
+      4vmin 54vmin $grey1,
+      5vmin 54vmin $grey1,
+      6vmin 54vmin $grey1,
+      10vmin 54vmin $white,
+      11vmin 54vmin $white,
+      12vmin 54vmin $white,
+      13vmin 54vmin $white,
+      14vmin 54vmin $white,
+      15vmin 54vmin $white,
+      16vmin 54vmin $white,
+      17vmin 54vmin $white,
+      29vmin 54vmin $white,
+      30vmin 54vmin $white,
+      32vmin 54vmin $white,
+      31vmin 54vmin $white,
+      33vmin 54vmin $white,
+      34vmin 54vmin $white,
+      35vmin 54vmin $white,
+      10vmin 55vmin $yellow,
+      11vmin 55vmin $yellow,
+      12vmin 55vmin $yellow,
+      13vmin 55vmin $yellow,
+      14vmin 55vmin $yellow,
+      15vmin 55vmin $yellow,
+      16vmin 55vmin $yellow,
+      17vmin 55vmin $yellow,
+      29vmin 55vmin $moss,
+      30vmin 55vmin $moss,
+      32vmin 55vmin $moss,
+      31vmin 55vmin $moss,
+      33vmin 55vmin $moss,
+      34vmin 55vmin $moss,
+      35vmin 55vmin $moss,
+      10vmin 56vmin $yellow,
+      11vmin 56vmin $yellow,
+      12vmin 56vmin $yellow,
+      13vmin 56vmin $yellow,
+      14vmin 56vmin $yellow,
+      15vmin 56vmin $yellow,
+      16vmin 56vmin $yellow,
+      17vmin 56vmin $yellow,
+      29vmin 56vmin $moss,
+      30vmin 56vmin $moss,
+      32vmin 56vmin $moss,
+      31vmin 56vmin $moss,
+      33vmin 56vmin $moss,
+      34vmin 56vmin $moss,
+      35vmin 56vmin $moss,
+      10vmin 57vmin $yellow,
+      11vmin 57vmin $yellow,
+      12vmin 57vmin $yellow,
+      13vmin 57vmin $yellow,
+      14vmin 57vmin $yellow,
+      15vmin 57vmin $yellow,
+      16vmin 57vmin $yellow,
+      17vmin 57vmin $yellow,
+      29vmin 57vmin $moss,
+      30vmin 57vmin $moss,
+      32vmin 57vmin $moss,
+      31vmin 57vmin $moss,
+      33vmin 57vmin $moss,
+      34vmin 57vmin $moss,
+      35vmin 57vmin $moss,
+      10vmin 58vmin $yellow,
+      11vmin 58vmin $yellow,
+      12vmin 58vmin $yellow,
+      13vmin 58vmin $yellow,
+      14vmin 58vmin $yellow,
+      15vmin 58vmin $yellow,
+      16vmin 58vmin $yellow,
+      17vmin 58vmin $yellow,
+      29vmin 58vmin $moss,
+      30vmin 58vmin $moss,
+      32vmin 58vmin $moss,
+      31vmin 58vmin $moss,
+      33vmin 58vmin $moss,
+      34vmin 58vmin $moss,
+      35vmin 58vmin $moss,
       ;
   }
 }
